Use h1 for headings instead of p with dedicated class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div class="spielbereich">
     <div class="teilbereich links">
-        <p class="ueberschrift">Verfügbare Aktionstypen in dieser Runde</p>
+        <h1>Verfügbare Aktionstypen in dieser Runde</h1>
         <ul class="verfuegbare-aktionen">
             <li class="verfuegbare-aktion">
                 <i class="fas fa-puzzle-piece"></i>
@@ -59,8 +59,8 @@
 
     <div class="teilbereich">
         <div class="rundenstart-anzeige">
-            <p class="ueberschrift">Runde startet in</p>
-            <p class="ueberschrift stoppuhr"><span id="stoppuhr-wert">300</span> s</p>
+            <h1>Runde startet in</h1>
+            <h1 class="stoppuhr"><span id="stoppuhr-wert">300</span> s</h1>
         </div>
 
 
