Display available action types dynamically when received from game server

--- a/index.html
+++ b/index.html
@@ -18,42 +18,42 @@
     <div class="teilbereich links">
         <h1>Verfügbare Aktionstypen in dieser Runde</h1>
         <ul class="verfuegbare-aktionen">
-            <li class="verfuegbare-aktion">
-                <i class="fas fa-puzzle-piece"></i>
-                <div>Aktionstyp</div>
-            </li>
-            <li class="verfuegbare-aktion">
-                <i class="fas fa-puzzle-piece"></i>
-                <div>Aktionstyp</div>
-            </li>
-            <li class="verfuegbare-aktion">
-                <i class="fas fa-puzzle-piece"></i>
-                <div>Aktionstyp</div>
-            </li>
-            <li class="verfuegbare-aktion">
-                <i class="fas fa-puzzle-piece"></i>
-                <div>Aktionstyp</div>
-            </li>
-            <li class="verfuegbare-aktion">
-                <i class="fas fa-puzzle-piece"></i>
-                <div>Aktionstyp</div>
-            </li>
-            <li class="verfuegbare-aktion">
-                <i class="fas fa-puzzle-piece"></i>
-                <div>Aktionstyp</div>
-            </li>
-            <li class="verfuegbare-aktion">
-                <i class="fas fa-puzzle-piece"></i>
-                <div>Aktionstyp</div>
-            </li>
-            <li class="verfuegbare-aktion">
-                <i class="fas fa-puzzle-piece"></i>
-                <div>Aktionstyp</div>
-            </li>
-            <li class="verfuegbare-aktion">
-                <i class="fas fa-puzzle-piece"></i>
-                <div>Aktionstyp</div>
-            </li>
+            <!--<li class="verfuegbare-aktion">-->
+                <!--<i class="fas fa-puzzle-piece"></i>-->
+                <!--<div>Aktionstyp</div>-->
+            <!--</li>-->
+            <!--<li class="verfuegbare-aktion">-->
+                <!--<i class="fas fa-puzzle-piece"></i>-->
+                <!--<div>Aktionstyp</div>-->
+            <!--</li>-->
+            <!--<li class="verfuegbare-aktion">-->
+                <!--<i class="fas fa-puzzle-piece"></i>-->
+                <!--<div>Aktionstyp</div>-->
+            <!--</li>-->
+            <!--<li class="verfuegbare-aktion">-->
+                <!--<i class="fas fa-puzzle-piece"></i>-->
+                <!--<div>Aktionstyp</div>-->
+            <!--</li>-->
+            <!--<li class="verfuegbare-aktion">-->
+                <!--<i class="fas fa-puzzle-piece"></i>-->
+                <!--<div>Aktionstyp</div>-->
+            <!--</li>-->
+            <!--<li class="verfuegbare-aktion">-->
+                <!--<i class="fas fa-puzzle-piece"></i>-->
+                <!--<div>Aktionstyp</div>-->
+            <!--</li>-->
+            <!--<li class="verfuegbare-aktion">-->
+                <!--<i class="fas fa-puzzle-piece"></i>-->
+                <!--<div>Aktionstyp</div>-->
+            <!--</li>-->
+            <!--<li class="verfuegbare-aktion">-->
+                <!--<i class="fas fa-puzzle-piece"></i>-->
+                <!--<div>Aktionstyp</div>-->
+            <!--</li>-->
+            <!--<li class="verfuegbare-aktion">-->
+                <!--<i class="fas fa-puzzle-piece"></i>-->
+                <!--<div>Aktionstyp</div>-->
+            <!--</li>-->
         </ul>
     </div>
 
