Added dropdown to choose player and subscribe to the correct topic

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 <div class="kopfzeile">
     <p>Sphero Rallye</p>
+    <select id="spieler">
+        <option value="">Spieler auswählen</option>
+        <option value="player1">Spieler 1</option>
+        <option value="player2">Spieler 2</option>
+        <option value="player3">Spieler 3</option>
+        <option value="player4">Spieler 4</option>
+        <option value="player5">Spieler 5</option>
+    </select>
 </div>
 
 <div class="spielbereich">
