Style planned actions according to the selected action

--- a/index.html
+++ b/index.html
@@ -78,55 +78,90 @@
                 <div class="aktions-auswahl">
                     <select>
                         <option value="">Wähle einen Aktionstyp</option>
-                        <option value="fahren">Fahren</option>
-                        <option value="drehen">Drehen</option>
-                        <option value="farbe-aendern">Farbe ändern</option>
+                        <option value="MOVE">Fahren</option>
+                        <option value="TURN_AROUND">Drehen</option>
+                        <option value="SET_COLOR">Farbe ändern</option>
                     </select>
                 </div>
+                <div class="aktion-spacer"></div>
+                <input type="number" class="aktions-wert MOVE">
+                <input type="number" class="aktions-wert TURN_AROUND">
+                <div class="aktions-wert SET_COLOR">
+                    <input type="color">
+                </div>
+                <p class="aktions-einheit"></p>
             </div>
             <div class="aktion">
                 <i class="fas fa-puzzle-piece"></i>
                 <div class="aktions-auswahl">
                     <select>
                         <option value="">Wähle einen Aktionstyp</option>
-                        <option value="fahren">Fahren</option>
-                        <option value="drehen">Drehen</option>
-                        <option value="farbe-aendern">Farbe ändern</option>
+                        <option value="MOVE">Fahren</option>
+                        <option value="TURN_AROUND">Drehen</option>
+                        <option value="SET_COLOR">Farbe ändern</option>
                     </select>
                 </div>
+                <div class="aktion-spacer"></div>
+                <input type="number" class="aktions-wert MOVE">
+                <input type="number" class="aktions-wert TURN_AROUND">
+                <div class="aktions-wert SET_COLOR">
+                    <input type="color">
+                </div>
+                <p class="aktions-einheit"></p>
             </div>
             <div class="aktion">
                 <i class="fas fa-puzzle-piece"></i>
                 <div class="aktions-auswahl">
                     <select>
                         <option value="">Wähle einen Aktionstyp</option>
-                        <option value="fahren">Fahren</option>
-                        <option value="drehen">Drehen</option>
-                        <option value="farbe-aendern">Farbe ändern</option>
+                        <option value="MOVE">Fahren</option>
+                        <option value="TURN_AROUND">Drehen</option>
+                        <option value="SET_COLOR">Farbe ändern</option>
                     </select>
                 </div>
+                <div class="aktion-spacer"></div>
+                <input type="number" class="aktions-wert MOVE">
+                <input type="number" class="aktions-wert TURN_AROUND">
+                <div class="aktions-wert SET_COLOR">
+                    <input type="color">
+                </div>
+                <p class="aktions-einheit"></p>
             </div>
             <div class="aktion">
                 <i class="fas fa-puzzle-piece"></i>
                 <div class="aktions-auswahl">
                     <select>
                         <option value="">Wähle einen Aktionstyp</option>
-                        <option value="fahren">Fahren</option>
-                        <option value="drehen">Drehen</option>
-                        <option value="farbe-aendern">Farbe ändern</option>
+                        <option value="MOVE">Fahren</option>
+                        <option value="TURN_AROUND">Drehen</option>
+                        <option value="SET_COLOR">Farbe ändern</option>
                     </select>
                 </div>
+                <div class="aktion-spacer"></div>
+                <input type="number" class="aktions-wert MOVE">
+                <input type="number" class="aktions-wert TURN_AROUND">
+                <div class="aktions-wert SET_COLOR">
+                    <input type="color">
+                </div>
+                <p class="aktions-einheit"></p>
             </div>
             <div class="aktion">
                 <i class="fas fa-puzzle-piece"></i>
                 <div class="aktions-auswahl">
                     <select>
                         <option value="">Wähle einen Aktionstyp</option>
-                        <option value="fahren">Fahren</option>
-                        <option value="drehen">Drehen</option>
-                        <option value="farbe-aendern">Farbe ändern</option>
+                        <option value="MOVE">Fahren</option>
+                        <option value="TURN_AROUND">Drehen</option>
+                        <option value="SET_COLOR">Farbe ändern</option>
                     </select>
                 </div>
+                <div class="aktion-spacer"></div>
+                <input type="number" class="aktions-wert MOVE">
+                <input type="number" class="aktions-wert TURN_AROUND">
+                <div class="aktions-wert SET_COLOR">
+                    <input type="color">
+                </div>
+                <p class="aktions-einheit"></p>
             </div>
         </div>
 
