Simplify action type selection

--- a/index.html
+++ b/index.html
@@ -27,40 +27,40 @@
         <h1>Verfügbare Aktionstypen in dieser Runde</h1>
         <ul class="verfuegbare-aktionen">
             <!--<li class="verfuegbare-aktion">-->
-                <!--<i class="fas fa-puzzle-piece"></i>-->
-                <!--<div>Aktionstyp</div>-->
+            <!--<i class="fas fa-puzzle-piece"></i>-->
+            <!--<div>Aktionstyp</div>-->
             <!--</li>-->
             <!--<li class="verfuegbare-aktion">-->
-                <!--<i class="fas fa-puzzle-piece"></i>-->
-                <!--<div>Aktionstyp</div>-->
+            <!--<i class="fas fa-puzzle-piece"></i>-->
+            <!--<div>Aktionstyp</div>-->
             <!--</li>-->
             <!--<li class="verfuegbare-aktion">-->
-                <!--<i class="fas fa-puzzle-piece"></i>-->
-                <!--<div>Aktionstyp</div>-->
+            <!--<i class="fas fa-puzzle-piece"></i>-->
+            <!--<div>Aktionstyp</div>-->
             <!--</li>-->
             <!--<li class="verfuegbare-aktion">-->
-                <!--<i class="fas fa-puzzle-piece"></i>-->
-                <!--<div>Aktionstyp</div>-->
+            <!--<i class="fas fa-puzzle-piece"></i>-->
+            <!--<div>Aktionstyp</div>-->
             <!--</li>-->
             <!--<li class="verfuegbare-aktion">-->
-                <!--<i class="fas fa-puzzle-piece"></i>-->
-                <!--<div>Aktionstyp</div>-->
+            <!--<i class="fas fa-puzzle-piece"></i>-->
+            <!--<div>Aktionstyp</div>-->
             <!--</li>-->
             <!--<li class="verfuegbare-aktion">-->
-                <!--<i class="fas fa-puzzle-piece"></i>-->
-                <!--<div>Aktionstyp</div>-->
+            <!--<i class="fas fa-puzzle-piece"></i>-->
+            <!--<div>Aktionstyp</div>-->
             <!--</li>-->
             <!--<li class="verfuegbare-aktion">-->
-                <!--<i class="fas fa-puzzle-piece"></i>-->
-                <!--<div>Aktionstyp</div>-->
+            <!--<i class="fas fa-puzzle-piece"></i>-->
+            <!--<div>Aktionstyp</div>-->
             <!--</li>-->
             <!--<li class="verfuegbare-aktion">-->
-                <!--<i class="fas fa-puzzle-piece"></i>-->
-                <!--<div>Aktionstyp</div>-->
+            <!--<i class="fas fa-puzzle-piece"></i>-->
+            <!--<div>Aktionstyp</div>-->
             <!--</li>-->
             <!--<li class="verfuegbare-aktion">-->
-                <!--<i class="fas fa-puzzle-piece"></i>-->
-                <!--<div>Aktionstyp</div>-->
+            <!--<i class="fas fa-puzzle-piece"></i>-->
+            <!--<div>Aktionstyp</div>-->
             <!--</li>-->
         </ul>
     </div>
@@ -75,14 +75,12 @@
         <div class="geplante-aktionen">
             <div class="aktion">
                 <i class="fas fa-puzzle-piece"></i>
-                <div class="aktions-auswahl">
-                    <select>
-                        <option value="">Wähle einen Aktionstyp</option>
-                        <option value="MOVE">Fahren</option>
-                        <option value="TURN_AROUND">Drehen</option>
-                        <option value="SET_COLOR">Farbe ändern</option>
-                    </select>
-                </div>
+                <select class="aktions-auswahl">
+                    <option value="">Wähle einen Aktionstyp</option>
+                    <option value="MOVE">Fahren</option>
+                    <option value="TURN_AROUND">Drehen</option>
+                    <option value="SET_COLOR">Farbe ändern</option>
+                </select>
                 <div class="aktion-spacer"></div>
                 <input type="number" class="aktions-wert MOVE">
                 <input type="number" class="aktions-wert TURN_AROUND">
@@ -93,14 +91,12 @@
             </div>
             <div class="aktion">
                 <i class="fas fa-puzzle-piece"></i>
-                <div class="aktions-auswahl">
-                    <select>
-                        <option value="">Wähle einen Aktionstyp</option>
-                        <option value="MOVE">Fahren</option>
-                        <option value="TURN_AROUND">Drehen</option>
-                        <option value="SET_COLOR">Farbe ändern</option>
-                    </select>
-                </div>
+                <select class="aktions-auswahl">
+                    <option value="">Wähle einen Aktionstyp</option>
+                    <option value="MOVE">Fahren</option>
+                    <option value="TURN_AROUND">Drehen</option>
+                    <option value="SET_COLOR">Farbe ändern</option>
+                </select>
                 <div class="aktion-spacer"></div>
                 <input type="number" class="aktions-wert MOVE">
                 <input type="number" class="aktions-wert TURN_AROUND">
@@ -111,14 +107,12 @@
             </div>
             <div class="aktion">
                 <i class="fas fa-puzzle-piece"></i>
-                <div class="aktions-auswahl">
-                    <select>
-                        <option value="">Wähle einen Aktionstyp</option>
-                        <option value="MOVE">Fahren</option>
-                        <option value="TURN_AROUND">Drehen</option>
-                        <option value="SET_COLOR">Farbe ändern</option>
-                    </select>
-                </div>
+                <select class="aktions-auswahl">
+                    <option value="">Wähle einen Aktionstyp</option>
+                    <option value="MOVE">Fahren</option>
+                    <option value="TURN_AROUND">Drehen</option>
+                    <option value="SET_COLOR">Farbe ändern</option>
+                </select>
                 <div class="aktion-spacer"></div>
                 <input type="number" class="aktions-wert MOVE">
                 <input type="number" class="aktions-wert TURN_AROUND">
@@ -129,14 +123,12 @@
             </div>
             <div class="aktion">
                 <i class="fas fa-puzzle-piece"></i>
-                <div class="aktions-auswahl">
-                    <select>
-                        <option value="">Wähle einen Aktionstyp</option>
-                        <option value="MOVE">Fahren</option>
-                        <option value="TURN_AROUND">Drehen</option>
-                        <option value="SET_COLOR">Farbe ändern</option>
-                    </select>
-                </div>
+                <select class="aktions-auswahl">
+                    <option value="">Wähle einen Aktionstyp</option>
+                    <option value="MOVE">Fahren</option>
+                    <option value="TURN_AROUND">Drehen</option>
+                    <option value="SET_COLOR">Farbe ändern</option>
+                </select>
                 <div class="aktion-spacer"></div>
                 <input type="number" class="aktions-wert MOVE">
                 <input type="number" class="aktions-wert TURN_AROUND">
@@ -147,14 +139,12 @@
             </div>
             <div class="aktion">
                 <i class="fas fa-puzzle-piece"></i>
-                <div class="aktions-auswahl">
-                    <select>
-                        <option value="">Wähle einen Aktionstyp</option>
-                        <option value="MOVE">Fahren</option>
-                        <option value="TURN_AROUND">Drehen</option>
-                        <option value="SET_COLOR">Farbe ändern</option>
-                    </select>
-                </div>
+                <select class="aktions-auswahl">
+                    <option value="">Wähle einen Aktionstyp</option>
+                    <option value="MOVE">Fahren</option>
+                    <option value="TURN_AROUND">Drehen</option>
+                    <option value="SET_COLOR">Farbe ändern</option>
+                </select>
                 <div class="aktion-spacer"></div>
                 <input type="number" class="aktions-wert MOVE">
                 <input type="number" class="aktions-wert TURN_AROUND">
