Hooked up cancel button to resetting all planned actions

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <i class="fas fa-check"></i>
                 Abschicken
             </button>
-            <button id="zuruecksetzen">
+            <button id="alle-aktionen-zuruecksetzen">
                 <i class="fas fa-times"></i>
                 Zurücksetzen
             </button>
