Set default values for the action input fields

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                     <option value="SET_COLOR">Farbe ändern</option>
                 </select>
                 <div class="aktion-spacer"></div>
-                <input type="number" class="aktions-wert MOVE">
-                <input type="number" class="aktions-wert TURN_AROUND">
+                <input type="number" class="aktions-wert MOVE" value="0">
+                <input type="number" class="aktions-wert TURN_AROUND" value="0">
                 <div class="aktions-wert SET_COLOR">
-                    <input type="color">
+                    <input type="color" value="#4CB944">
                 </div>
                 <p class="aktions-einheit"></p>
             </div>
@@ -98,10 +98,10 @@
                     <option value="SET_COLOR">Farbe ändern</option>
                 </select>
                 <div class="aktion-spacer"></div>
-                <input type="number" class="aktions-wert MOVE">
-                <input type="number" class="aktions-wert TURN_AROUND">
+                <input type="number" class="aktions-wert MOVE" value="0">
+                <input type="number" class="aktions-wert TURN_AROUND" value="0">
                 <div class="aktions-wert SET_COLOR">
-                    <input type="color">
+                    <input type="color" value="#4CB944">
                 </div>
                 <p class="aktions-einheit"></p>
             </div>
@@ -114,10 +114,10 @@
                     <option value="SET_COLOR">Farbe ändern</option>
                 </select>
                 <div class="aktion-spacer"></div>
-                <input type="number" class="aktions-wert MOVE">
-                <input type="number" class="aktions-wert TURN_AROUND">
+                <input type="number" class="aktions-wert MOVE" value="0">
+                <input type="number" class="aktions-wert TURN_AROUND" value="0">
                 <div class="aktions-wert SET_COLOR">
-                    <input type="color">
+                    <input type="color" value="#4CB944">
                 </div>
                 <p class="aktions-einheit"></p>
             </div>
@@ -130,10 +130,10 @@
                     <option value="SET_COLOR">Farbe ändern</option>
                 </select>
                 <div class="aktion-spacer"></div>
-                <input type="number" class="aktions-wert MOVE">
-                <input type="number" class="aktions-wert TURN_AROUND">
+                <input type="number" class="aktions-wert MOVE" value="0">
+                <input type="number" class="aktions-wert TURN_AROUND" value="0">
                 <div class="aktions-wert SET_COLOR">
-                    <input type="color">
+                    <input type="color" value="#4CB944">
                 </div>
                 <p class="aktions-einheit"></p>
             </div>
@@ -146,10 +146,10 @@
                     <option value="SET_COLOR">Farbe ändern</option>
                 </select>
                 <div class="aktion-spacer"></div>
-                <input type="number" class="aktions-wert MOVE">
-                <input type="number" class="aktions-wert TURN_AROUND">
+                <input type="number" class="aktions-wert MOVE" value="0">
+                <input type="number" class="aktions-wert TURN_AROUND" value="0">
                 <div class="aktions-wert SET_COLOR">
-                    <input type="color">
+                    <input type="color" value="#4CB944">
                 </div>
                 <p class="aktions-einheit"></p>
             </div>
