Added favicon and logo in header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
 
 <div class="kopfzeile">
-    <p>Sphero Rallye</p>
+    <div id="logo">
+        <img id="robo-icon" src="img/robo_white.png">
+        <p>Sphero Rallye</p>
+    </div>
     <select id="spieler">
         <option value="">Spieler auswählen</option>
         <option value="player1">Spieler 1</option>
