WIP for sending correct JSON payload to server: use updated action type identifiers from server

--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
                 <i class="fas fa-puzzle-piece"></i>
                 <select class="aktions-auswahl">
                     <option value="">Wähle einen Aktionstyp</option>
-                    <option value="MOVE">Fahren</option>
-                    <option value="TURN_AROUND">Drehen</option>
-                    <option value="SET_COLOR">Farbe ändern</option>
+                    <option value="ROLL">Fahren</option>
+                    <option value="ROTATE">Drehen</option>
+                    <option value="SET_RGB">Farbe ändern</option>
                 </select>
                 <div class="aktion-spacer"></div>
-                <input type="number" class="aktions-wert MOVE" value="0">
-                <input type="number" class="aktions-wert TURN_AROUND" value="0">
-                <div class="aktions-wert SET_COLOR">
+                <input type="number" class="aktions-wert ROLL" value="0">
+                <input type="number" class="aktions-wert ROTATE" value="0">
+                <div class="aktions-wert SET_RGB">
                     <input type="color" value="#4CB944">
                 </div>
                 <p class="aktions-einheit"></p>
@@ -96,14 +96,14 @@
                 <i class="fas fa-puzzle-piece"></i>
                 <select class="aktions-auswahl">
                     <option value="">Wähle einen Aktionstyp</option>
-                    <option value="MOVE">Fahren</option>
-                    <option value="TURN_AROUND">Drehen</option>
-                    <option value="SET_COLOR">Farbe ändern</option>
+                    <option value="ROLL">Fahren</option>
+                    <option value="ROTATE">Drehen</option>
+                    <option value="SET_RGB">Farbe ändern</option>
                 </select>
                 <div class="aktion-spacer"></div>
-                <input type="number" class="aktions-wert MOVE" value="0">
-                <input type="number" class="aktions-wert TURN_AROUND" value="0">
-                <div class="aktions-wert SET_COLOR">
+                <input type="number" class="aktions-wert ROLL" value="0">
+                <input type="number" class="aktions-wert ROTATE" value="0">
+                <div class="aktions-wert SET_RGB">
                     <input type="color" value="#4CB944">
                 </div>
                 <p class="aktions-einheit"></p>
@@ -112,14 +112,14 @@
                 <i class="fas fa-puzzle-piece"></i>
                 <select class="aktions-auswahl">
                     <option value="">Wähle einen Aktionstyp</option>
-                    <option value="MOVE">Fahren</option>
-                    <option value="TURN_AROUND">Drehen</option>
-                    <option value="SET_COLOR">Farbe ändern</option>
+                    <option value="ROLL">Fahren</option>
+                    <option value="ROTATE">Drehen</option>
+                    <option value="SET_RGB">Farbe ändern</option>
                 </select>
                 <div class="aktion-spacer"></div>
-                <input type="number" class="aktions-wert MOVE" value="0">
-                <input type="number" class="aktions-wert TURN_AROUND" value="0">
-                <div class="aktions-wert SET_COLOR">
+                <input type="number" class="aktions-wert ROLL" value="0">
+                <input type="number" class="aktions-wert ROTATE" value="0">
+                <div class="aktions-wert SET_RGB">
                     <input type="color" value="#4CB944">
                 </div>
                 <p class="aktions-einheit"></p>
@@ -128,14 +128,14 @@
                 <i class="fas fa-puzzle-piece"></i>
                 <select class="aktions-auswahl">
                     <option value="">Wähle einen Aktionstyp</option>
-                    <option value="MOVE">Fahren</option>
-                    <option value="TURN_AROUND">Drehen</option>
-                    <option value="SET_COLOR">Farbe ändern</option>
+                    <option value="ROLL">Fahren</option>
+                    <option value="ROTATE">Drehen</option>
+                    <option value="SET_RGB">Farbe ändern</option>
                 </select>
                 <div class="aktion-spacer"></div>
-                <input type="number" class="aktions-wert MOVE" value="0">
-                <input type="number" class="aktions-wert TURN_AROUND" value="0">
-                <div class="aktions-wert SET_COLOR">
+                <input type="number" class="aktions-wert ROLL" value="0">
+                <input type="number" class="aktions-wert ROTATE" value="0">
+                <div class="aktions-wert SET_RGB">
                     <input type="color" value="#4CB944">
                 </div>
                 <p class="aktions-einheit"></p>
@@ -144,14 +144,14 @@
                 <i class="fas fa-puzzle-piece"></i>
                 <select class="aktions-auswahl">
                     <option value="">Wähle einen Aktionstyp</option>
-                    <option value="MOVE">Fahren</option>
-                    <option value="TURN_AROUND">Drehen</option>
-                    <option value="SET_COLOR">Farbe ändern</option>
+                    <option value="ROLL">Fahren</option>
+                    <option value="ROTATE">Drehen</option>
+                    <option value="SET_RGB">Farbe ändern</option>
                 </select>
                 <div class="aktion-spacer"></div>
-                <input type="number" class="aktions-wert MOVE" value="0">
-                <input type="number" class="aktions-wert TURN_AROUND" value="0">
-                <div class="aktions-wert SET_COLOR">
+                <input type="number" class="aktions-wert ROLL" value="0">
+                <input type="number" class="aktions-wert ROTATE" value="0">
+                <div class="aktions-wert SET_RGB">
                     <input type="color" value="#4CB944">
                 </div>
                 <p class="aktions-einheit"></p>
