Improved styling of action type selection

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Sphero Rallye Client</title>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
           integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
@@ -84,7 +84,6 @@
                     <option value="ROTATE">Drehen</option>
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
-                <div class="aktion-spacer"></div>
                 <input type="number" class="aktions-wert ROLL" value="0">
                 <input type="number" class="aktions-wert ROTATE" value="0">
                 <div class="aktions-wert SET_RGB">
@@ -100,7 +99,6 @@
                     <option value="ROTATE">Drehen</option>
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
-                <div class="aktion-spacer"></div>
                 <input type="number" class="aktions-wert ROLL" value="0">
                 <input type="number" class="aktions-wert ROTATE" value="0">
                 <div class="aktions-wert SET_RGB">
@@ -116,7 +114,6 @@
                     <option value="ROTATE">Drehen</option>
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
-                <div class="aktion-spacer"></div>
                 <input type="number" class="aktions-wert ROLL" value="0">
                 <input type="number" class="aktions-wert ROTATE" value="0">
                 <div class="aktions-wert SET_RGB">
@@ -132,7 +129,6 @@
                     <option value="ROTATE">Drehen</option>
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
-                <div class="aktion-spacer"></div>
                 <input type="number" class="aktions-wert ROLL" value="0">
                 <input type="number" class="aktions-wert ROTATE" value="0">
                 <div class="aktions-wert SET_RGB">
@@ -148,7 +144,6 @@
                     <option value="ROTATE">Drehen</option>
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
-                <div class="aktion-spacer"></div>
                 <input type="number" class="aktions-wert ROLL" value="0">
                 <input type="number" class="aktions-wert ROTATE" value="0">
                 <div class="aktions-wert SET_RGB">
