Unify action type input html structure

--- a/index.html
+++ b/index.html
@@ -84,8 +84,12 @@
                     <option value="ROTATE">Drehen</option>
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
-                <input type="number" class="aktions-wert ROLL" value="0">
-                <input type="number" class="aktions-wert ROTATE" value="0">
+                <div class="aktions-wert ROLL">
+                    <input type="number" value="0">
+                </div>
+                <div class="aktions-wert ROTATE">
+                    <input type="number" value="0">
+                </div>
                 <div class="aktions-wert SET_RGB">
                     <input type="color" value="#4CB944">
                 </div>
@@ -99,8 +103,12 @@
                     <option value="ROTATE">Drehen</option>
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
-                <input type="number" class="aktions-wert ROLL" value="0">
-                <input type="number" class="aktions-wert ROTATE" value="0">
+                <div class="aktions-wert ROLL">
+                    <input type="number" value="0">
+                </div>
+                <div class="aktions-wert ROTATE">
+                    <input type="number" value="0">
+                </div>
                 <div class="aktions-wert SET_RGB">
                     <input type="color" value="#4CB944">
                 </div>
@@ -114,8 +122,12 @@
                     <option value="ROTATE">Drehen</option>
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
-                <input type="number" class="aktions-wert ROLL" value="0">
-                <input type="number" class="aktions-wert ROTATE" value="0">
+                <div class="aktions-wert ROLL">
+                    <input type="number" value="0">
+                </div>
+                <div class="aktions-wert ROTATE">
+                    <input type="number" value="0">
+                </div>
                 <div class="aktions-wert SET_RGB">
                     <input type="color" value="#4CB944">
                 </div>
@@ -129,8 +141,12 @@
                     <option value="ROTATE">Drehen</option>
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
-                <input type="number" class="aktions-wert ROLL" value="0">
-                <input type="number" class="aktions-wert ROTATE" value="0">
+                <div class="aktions-wert ROLL">
+                    <input type="number" value="0">
+                </div>
+                <div class="aktions-wert ROTATE">
+                    <input type="number" value="0">
+                </div>
                 <div class="aktions-wert SET_RGB">
                     <input type="color" value="#4CB944">
                 </div>
@@ -144,8 +160,12 @@
                     <option value="ROTATE">Drehen</option>
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
-                <input type="number" class="aktions-wert ROLL" value="0">
-                <input type="number" class="aktions-wert ROTATE" value="0">
+                <div class="aktions-wert ROLL">
+                    <input type="number" value="0">
+                </div>
+                <div class="aktions-wert ROTATE">
+                    <input type="number" value="0">
+                </div>
                 <div class="aktions-wert SET_RGB">
                     <input type="color" value="#4CB944">
                 </div>
