Remove unused html code which gets created dynamically and leave sample for orientation

--- a/index.html
+++ b/index.html
@@ -29,42 +29,10 @@
     <div class="teilbereich links">
         <h1>Verfügbare Aktionstypen in dieser Runde</h1>
         <ul class="verfuegbare-aktionen">
-            <!--<li class="verfuegbare-aktion">-->
-            <!--<i class="fas fa-puzzle-piece"></i>-->
-            <!--<div>Aktionstyp</div>-->
-            <!--</li>-->
-            <!--<li class="verfuegbare-aktion">-->
-            <!--<i class="fas fa-puzzle-piece"></i>-->
-            <!--<div>Aktionstyp</div>-->
-            <!--</li>-->
-            <!--<li class="verfuegbare-aktion">-->
-            <!--<i class="fas fa-puzzle-piece"></i>-->
-            <!--<div>Aktionstyp</div>-->
-            <!--</li>-->
-            <!--<li class="verfuegbare-aktion">-->
-            <!--<i class="fas fa-puzzle-piece"></i>-->
-            <!--<div>Aktionstyp</div>-->
-            <!--</li>-->
-            <!--<li class="verfuegbare-aktion">-->
-            <!--<i class="fas fa-puzzle-piece"></i>-->
-            <!--<div>Aktionstyp</div>-->
-            <!--</li>-->
-            <!--<li class="verfuegbare-aktion">-->
-            <!--<i class="fas fa-puzzle-piece"></i>-->
-            <!--<div>Aktionstyp</div>-->
-            <!--</li>-->
-            <!--<li class="verfuegbare-aktion">-->
-            <!--<i class="fas fa-puzzle-piece"></i>-->
-            <!--<div>Aktionstyp</div>-->
-            <!--</li>-->
-            <!--<li class="verfuegbare-aktion">-->
-            <!--<i class="fas fa-puzzle-piece"></i>-->
-            <!--<div>Aktionstyp</div>-->
-            <!--</li>-->
-            <!--<li class="verfuegbare-aktion">-->
-            <!--<i class="fas fa-puzzle-piece"></i>-->
-            <!--<div>Aktionstyp</div>-->
-            <!--</li>-->
+            <!--  <li class="verfuegbare-aktion">        -->
+            <!--    <i class="fas fa-puzzle-piece"></i>  -->
+            <!--    <div>Aktionstyp</div>                -->
+            <!--  </li>                                  -->
         </ul>
     </div>
 
@@ -85,7 +53,8 @@
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
                 <div class="aktions-wert ROLL">
-                    <input type="number" value="0">
+                    <input class="geschwindigkeit" type="number" value="0">
+                    <input class="dauer" type="number" value="0">
                 </div>
                 <div class="aktions-wert ROTATE">
                     <input type="number" value="0">
