Remove accidentally created code

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
                     <option value="SET_RGB">Farbe ändern</option>
                 </select>
                 <div class="aktions-wert ROLL">
-                    <input class="geschwindigkeit" type="number" value="0">
-                    <input class="dauer" type="number" value="0">
+                    <input type="number" value="0">
                 </div>
                 <div class="aktions-wert ROTATE">
                     <input type="number" value="0">
