Validate if action type is still available when selecting it

--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
 <script src="scripts/index.js"></script>
 <script>
   document.querySelectorAll(".aktions-auswahl").forEach(function (element) {
-    element.addEventListener("change", aktionSetzen)
+    element.addEventListener("change", aktionSetzen);
+    element.addEventListener("change", validateActionTypeSelection);
   });
 
   document.querySelector("#spieler")
