--- a/index.html
+++ b/index.html
@@ -29,10 +29,42 @@
     <div class="teilbereich links">
         <h1>Verfügbare Aktionstypen in dieser Runde</h1>
         <ul class="verfuegbare-aktionen">
-            <!--  <li class="verfuegbare-aktion">        -->
-            <!--    <i class="fas fa-puzzle-piece"></i>  -->
-            <!--    <div>Aktionstyp</div>                -->
-            <!--  </li>                                  -->
+              <li class="verfuegbare-aktion ROLL">
+                <i class="fas fa-puzzle-piece"></i>
+                <div>Aktionstyp</div>
+              </li>
+              <li class="verfuegbare-aktion ROLL">
+                <i class="fas fa-puzzle-piece"></i>
+                <div>Aktionstyp</div>
+              </li>
+              <li class="verfuegbare-aktion ROTATE">
+                <i class="fas fa-puzzle-piece"></i>
+                <div>Aktionstyp</div>
+              </li>
+              <li class="verfuegbare-aktion ROLL">
+                <i class="fas fa-puzzle-piece"></i>
+                <div>Aktionstyp</div>
+              </li>
+              <li class="verfuegbare-aktion ROTATE">
+                <i class="fas fa-puzzle-piece"></i>
+                <div>Aktionstyp</div>
+              </li>
+              <li class="verfuegbare-aktion SET_RGB">
+                <i class="fas fa-puzzle-piece"></i>
+                <div>Aktionstyp</div>
+              </li>
+              <li class="verfuegbare-aktion ROLL">
+                <i class="fas fa-puzzle-piece"></i>
+                <div>Aktionstyp</div>
+              </li>
+              <li class="verfuegbare-aktion SET_RGB">
+                <i class="fas fa-puzzle-piece"></i>
+                <div>Aktionstyp</div>
+              </li>
+              <li class="verfuegbare-aktion ROLL">
+                <i class="fas fa-puzzle-piece"></i>
+                <div>Aktionstyp</div>
+              </li>
         </ul>
     </div>
 
